--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-Hayden Walker 2019
+Hayden Walker 2019-2020
 
-This is a portfolio of some of my favourite programs that I wrote during the summer of 2019.
+This is a portfolio of some of my favourite programs that I wrote during the summer of 2019 and onward.
     *The programs are arranged alphabetically (By folder name, not by title)
 
 NOTE: The following dependencies are required in order to successfully run some of these programs. These dependencies are *not* included in the Python Standard Library.
@@ -8,12 +8,12 @@ NOTE: The following dependencies are required in order to successfully run some 
     *Pygame (for the aquarium program as well as Conway's Game of Life)
 
 ------------------------------------------------------------------------------------------------------------
-Title (Date)
+Title (Date) [Dependencies]
     *Skills
 
     Desc.
 ------------------------------------------------------------------------------------------------------------
-Aquarium (19 August) [Requires Pygame]
+Aquarium (19 August 2019) [Requires Pygame]
     *Pygame
         *Importing sprites
     *Random library
@@ -29,7 +29,15 @@ Aquarium (19 August) [Requires Pygame]
 
     A simple aquarium. A random number of fish are spawned, each being an instance of the Fish class. Each is randomly assigned one of four breeds, and each has a randomly assigned speed. The fish will change directions when they come in contact with the screen's edge. Furthermore, each 50 millisecond cycle, each fish has a 1% chance (for each axis) of changing direction on its own, regardless of its position.
 ------------------------------------------------------------------------------------------------------------
-Binary to Decimal Converter (18 August)
+Binary Search Algorithm (21 July 2020)
+    *Recursion
+    *Conditionals
+    *Exception handling
+
+    A binary search algorithm. A sorted array of numbers is given along with a number to search for. The function
+will return the position of the target number in the array, or 'null' if it isn't there. Uses recursion.
+------------------------------------------------------------------------------------------------------------
+Binary to Decimal Converter (18 August 2019)
     *String slicing
         *Reversing
         *Concatenation
@@ -40,7 +48,7 @@ Binary to Decimal Converter (18 August)
     
     A simple binary to decimal converter; will accept an arbitrtary amount of bytes of arbitrary lengths.
 ------------------------------------------------------------------------------------------------------------
-Caesar Cypher (25 July)
+Caesar Cypher (25 July 2019)
     *Iterables
     *Conditionals
     *For Loops    
@@ -49,7 +57,7 @@ Caesar Cypher (25 July)
     
     Takes an encryption key (n) from 0-25 and moves each character ahead n spaces in the alphabet. If the letter reaches z, it wraps back to a.
 ------------------------------------------------------------------------------------------------------------
-Cash register (3 August)
+Cash register (3 August 2019)
     *Rounding
     *While Loops
     *Conditionals
@@ -57,7 +65,7 @@ Cash register (3 August)
     
     Takes a sales total and amount tendered, then calculates change and lists the amount of each denomination of change to return.
 ------------------------------------------------------------------------------------------------------------
-Collatz Conjecture (7 August) [Requires Matplotlib]
+Collatz Conjecture (7 August 2019) [Requires Matplotlib]
     *A Classic Algorithm
     *While Loops
     *Conditionals
@@ -69,7 +77,7 @@ Collatz Conjecture (7 August) [Requires Matplotlib]
     
     Takes a positive integer (n), and depending on its parity, will either divide it by 2 or multiply it by 3 then add 1, and repeat the whole process until the integer is equal to 1. It will then display a graph where x is the number of steps and y is the value of n.
 ------------------------------------------------------------------------------------------------------------
-Conway's Game of Life (22 August) [Requires Pygame]
+Conway's Game of Life (22 August 2019) [Requires Pygame]
     *A Cellular Automaton
     *Random Library
     *PyGame
@@ -83,7 +91,7 @@ Conway's Game of Life (22 August) [Requires Pygame]
 
     Generates 100 squares that can each be either living or dead; each 1-second "generation," if a living square has less than two or more than three living neighbours, it will die from either underpopulation or crowding. If a dead square has exactly three living neighbours, it will become living, via reproduction.
 ------------------------------------------------------------------------------------------------------------
-Line/square drawing (27 July)
+Line/square drawing (27 July 2019)
     *Tkinter GUI Library
         *Canvas
         *Buttons
@@ -96,7 +104,7 @@ Line/square drawing (27 July)
     
     A GUI application that takes a number (n) and, depending on which button is pressed, will generate either n lines or n rectangles, all of random size, position, and colour. It will display the last action completed in a status bar at the bottom.
 ------------------------------------------------------------------------------------------------------------
-Hangman (5 August)
+Hangman (5 August 2019)
     *Random Library
     *Reading from a text file
     *For Loops
@@ -107,7 +115,7 @@ Hangman (5 August)
     
     A game of hangman that pulls words from a 100-word text file.
 ------------------------------------------------------------------------------------------------------------
-Minefield/Minesweeper (20 July)
+Minefield/Minesweeper (20 July 2019)
     *System commands
     *Random Library
     *Wrapping
