--- a/README
+++ b/README
@@ -45,16 +45,16 @@ Binary to Decimal Converter (18 August 2019)
     *Conditionals
     *Math operators
         *Powers
-    
+
     A simple binary to decimal converter; will accept an arbitrtary amount of bytes of arbitrary lengths.
 ------------------------------------------------------------------------------------------------------------
 Caesar Cypher (25 July 2019)
     *Iterables
     *Conditionals
-    *For Loops    
+    *For Loops
     *List wrapping
     *Functions
-    
+
     Takes an encryption key (n) from 0-25 and moves each character ahead n spaces in the alphabet. If the letter reaches z, it wraps back to a.
 ------------------------------------------------------------------------------------------------------------
 Cash register (3 August 2019)
@@ -62,7 +62,7 @@ Cash register (3 August 2019)
     *While Loops
     *Conditionals
     *Functions
-    
+
     Takes a sales total and amount tendered, then calculates change and lists the amount of each denomination of change to return.
 ------------------------------------------------------------------------------------------------------------
 Collatz Conjecture (7 August 2019) [Requires Matplotlib]
@@ -74,7 +74,7 @@ Collatz Conjecture (7 August 2019) [Requires Matplotlib]
         *Floor division
         *Addition
     *Matplotlib Graphing Library
-    
+
     Takes a positive integer (n), and depending on its parity, will either divide it by 2 or multiply it by 3 then add 1, and repeat the whole process until the integer is equal to 1. It will then display a graph where x is the number of steps and y is the value of n.
 ------------------------------------------------------------------------------------------------------------
 Conway's Game of Life (22 August 2019) [Requires Pygame]
@@ -101,7 +101,7 @@ Line/square drawing (27 July 2019)
     *For Loops
     *Functions
     *Methods
-    
+
     A GUI application that takes a number (n) and, depending on which button is pressed, will generate either n lines or n rectangles, all of random size, position, and colour. It will display the last action completed in a status bar at the bottom.
 ------------------------------------------------------------------------------------------------------------
 Hangman (5 August 2019)
@@ -112,8 +112,16 @@ Hangman (5 August 2019)
     *Conditionals
     *Iterables
     *Functions
-    
+
     A game of hangman that pulls words from a 100-word text file.
+------------------------------------------------------------------------------------------------------------
+Insertion Sort (1 August 2020)
+    *Iteration
+    *Lists
+    *For loops
+    *Algorithms
+
+    Basic insertion sort algorithm
 ------------------------------------------------------------------------------------------------------------
 Minefield/Minesweeper (20 July 2019)
     *System commands
@@ -123,7 +131,7 @@ Minefield/Minesweeper (20 July 2019)
     *Conditionals
     *Functions
     *Game loop
-    
+
     A game that draws a 5x5 grid, in which a random number of randomly placed mines are hidden. Goal: Clear the board without hitting a mine.
 ------------------------------------------------------------------------------------------------------------
 Pig Latin (19 July)
@@ -140,7 +148,7 @@ Recursive Guessing Game (24 August)
         *Floor division
         *Addition
 
-    The user chooses a number between 0 and 100 (unknown to the computer), and the computer will guess it. A light project that I included because of recursion. 
+    The user chooses a number between 0 and 100 (unknown to the computer), and the computer will guess it. A light project that I included because of recursion.
 ------------------------------------------------------------------------------------------------------------
 Roman Numerals to Integer (19 January 2020)
     *Dictionary data type
@@ -158,5 +166,5 @@ Monty Python's Python Soundboard (31 July)
     *Lambda Expressions
     *Object-Oriented Programming
     *Playing audio files
-    
+
     A just-for-fun soundboard of clips from Monty Python's Life of Brian. Fun Fact: The Python Programming Language is named after Monty Python!
